electro-acoustic works added

--- a/src/improvisational-and-electro-acoustic-works.html
+++ b/src/improvisational-and-electro-acoustic-works.html
@@ -121,50 +121,293 @@
 
         <div class="row">
           <br><br>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>...5, 6, 7, 8...</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <!-- <button type="button" data-toggle="modal" data-target="#5678-modal" class="btn btn-primary btn-large">
+                Preview
+              </button> -->
+            </div>
+
+            <!-- begin modal for preview -->
+            <!-- <div class="modal fade" id="5678-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="5678-modal-title">...5, 6, 7, 8...</h4>
+                    <audio src="" controls></audio>
+                  </div>
+                  <div class="modal-body">
+                    <img src="img/works-samples/" alt="...5, 6, 7, 8... preview" class="img-responsive" style="min-width: 100%;">
+                  </div>
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div> -->
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Armed</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#armed-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="armed-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="armed-modal-title">Armed</h4>
+                    <audio src="audio/armed.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="armed preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Benedictus</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#benedictus-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="benedictus-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="benedictus-modal-title">Benedictus</h4>
+                    <audio src="audio/benedictus.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="benedictus preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Lament & Apparition (Call & Response)</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#lament-apparition-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="lament-apparition-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="lament-apparition-modal-title">Lament & Apparition (Call & Response)</h4>
+                    <audio src="audio/lament-apparition.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="lament and apparition preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Now We Wake Up With Our Memory</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#now-we-wake-up-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="now-we-wake-up-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="now-we-wake-up-modal-title">Now We Wake Up With Our Memory</h4>
+                    <audio src="audio/now-we-wake-up.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="now we wake up with our memory preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Plump</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#plump-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="plump-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="plump-modal-title">Plump</h4>
+                    <audio src="audio/plump.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="plump preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Revelation 17</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#revelation-17-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="revelation-17-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="revelation-17-modal-title">Revelation 17</h4>
+                    <audio src="audio/revelation-17.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="revelation 17 preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Sax Bath</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#sax-bath-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="sax-bath-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="sax-bath-modal-title">Sax Bath</h4>
+                    <audio src="audio/sax-bath.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="sax bath preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
-          <div class="col-md-9">
+          <div class="col-md-9 repertoire-container">
             <h4>Swarm</h4>
             <hr>
-            <p>Description, price, first page</p>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <p>
+                This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+              </p>
+              <button type="button" data-toggle="modal" data-target="#swarm-modal" class="btn btn-primary btn-large">
+                Preview
+              </button>
+            </div>
+
+            <!-- begin modal for preview -->
+            <div class="modal fade" id="swarm-modal" tabindex="-1" role="dialog">
+              <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="swarm-modal-title">Swarm</h4>
+                    <audio src="audio/swarm.mp3" controls></audio>
+                  </div>
+                  <!-- <div class="modal-body">
+                    <img src="img/works-samples/" alt="swarm preview" class="img-responsive" style="min-width: 100%;">
+                  </div> -->
+                  <div class="modal-footer">
+                    <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- end modal for preview -->
           </div>
         </div>
       </div>
