--- a/src/handbell-works.html
+++ b/src/handbell-works.html
@@ -119,10 +119,37 @@
             <div class="row">
                 <h3>Originals</h3>
                 <br><br>
-                <div class="col-md-9">
-                    <h4>A Short Reverie</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
+                <div class="col-md-9 repertoire-container">
+                  <h4>A Short Reverie</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#short-reverie-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div>
+
+                  <!-- begin modal for preview -->
+                  <div class="modal fade" id="short-reverie-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="short-reverie-modal-title">A Short Reverie</h4>
+                          <!-- <audio src="audio/" controls></audio> -->
+                        </div>
+                        <!-- <div class="modal-body">
+                          <img src="img/works-samples/" alt="a short reverie preview" class="img-responsive" style="min-width: 100%;">
+                        </div> -->
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end modal for preview -->
 
                 </div>
 
@@ -131,36 +158,198 @@
             <div class="row">
                 <h3>Arrangements</h3>
                 <br><br>
-                <div class="col-md-9">
-                    <h4>Charlestown (from <em>The Southern Harmony</em>)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
+                <div class="col-md-9 repertoire-container">
+                  <h4>Charlestown (from <em>The Southern Harmony</em>)</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#charlestown-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div>
+
+                  <!-- begin modal for preview -->
+                  <div class="modal fade" id="charlestown-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="charlestown-modal-title">Charlestown (from <em>The Southern Harmony</em>)</h4>
+                          <!-- <audio src="audio/" controls></audio> -->
+                        </div>
+                        <div class="modal-body">
+                          <img src="img/works-samples/charlestown.png" alt="charlestown preview" class="img-responsive" style="min-width: 100%;">
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end modal for preview -->
                 </div>
-                <div class="col-md-9">
-                    <h4>How Can I Keep from Ringing</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
+                <div class="col-md-9 repertoire-container">
+                  <h4>How Can I Keep from Ringing</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#ringing-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div>
+
+                  <!-- begin modal for preview -->
+                  <div class="modal fade" id="ringing-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="ringing-modal-title">How Can I Keep from Ringing</h4>
+                          <!-- <audio src="audio/" controls></audio> -->
+                        </div>
+                        <div class="modal-body">
+                          <img src="img/works-samples/hcikfr.png" alt="how can I keep from ringing preview" class="img-responsive" style="min-width: 100%;">
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end modal for preview -->
                 </div>
-                <div class="col-md-9">
-                    <h4>Musette (Ravel)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
+                <div class="col-md-9 repertoire-container">
+                  <h4>Musette (Ravel)</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#musette-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div>
+
+                  <!-- begin modal for preview -->
+                  <div class="modal fade" id="musette-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="musette-modal-title">Musette (Ravel)</h4>
+                          <!-- <audio src="audio/" controls></audio> -->
+                        </div>
+                        <div class="modal-body">
+                          <img src="img/works-samples/musette.png" alt="musette preview" class="img-responsive" style="min-width: 100%;">
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end modal for preview -->
                 </div>
-                <div class="col-md-9">
-                    <h4>Over There (Cohan)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
+                <div class="col-md-9 repertoire-container">
+                  <h4>Over There (Cohan)</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#over-there-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div>
+
+                  <!-- begin modal for preview -->
+                  <div class="modal fade" id="over-there-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="over-there-modal-title">Over There (Cohan)</h4>
+                          <audio src="audio/armed.mp3" controls></audio>
+                        </div>
+                        <div class="modal-body">
+                          <img src="img/works-samples/over-there.png" alt="over there preview" class="img-responsive" style="min-width: 100%;">
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end modal for preview -->
                 </div>
-                <div class="col-md-9">
-                    <h4>Sous les D&ocirc;me (Delibes)</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
+                <div class="col-md-9 repertoire-container">
+                  <h4>Sous le D&ocirc;me (Delibes)</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#sous-les-dome-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div>
+
+                  <!-- begin modal for preview -->
+                  <div class="modal fade" id="sous-les-dome-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="sous-les-dome-modal-title">Sous le D&ocirc;me (Delibes)</h4>
+                          <audio src="audio/armed.mp3" controls></audio>
+                        </div>
+                        <div class="modal-body">
+                          <img src="img/works-samples/sous-le-dome-epais.png" alt="sous le dome preview" class="img-responsive" style="min-width: 100%;">
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- end modal for preview -->
                 </div>
-                <div class="col-md-9">
-                    <h4>Simple Arrangements for Two Octaves of Handbells or Chimes</h4>
-                    <hr>
-                    <p>Description, price, and first page</p>
-                </div>
+                <!-- <div class="col-md-9 repertoire-container">
+                  <h4>Simple Arrangements for Two Octaves of Handbells or Chimes</h4>
+                  <hr>
+                  <div class="col-md-9 col-sm-9 col-xs-12">
+                    <p>
+                      This is a description of Ted's piece! It's amazing! Look at how great it is! And <em>so</em> reasonably priced.
+                    </p>
+                    <button type="button" data-toggle="modal" data-target="#simple-arrangements-modal" class="btn btn-primary btn-large">
+                      Preview
+                    </button>
+                  </div> -->
+
+                  <!-- begin modal for preview -->
+                  <!-- <div class="modal fade" id="simple-arrangements-modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog modal-lg" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button"><span aria-hidden="true">&times;</span></button>
+                          <h4 class="modal-title" id="simple-arrangements-modal-title">Simple Arrangements for Two Octaves of Handbells or Chimes</h4>
+                          <audio src="audio/armed.mp3" controls></audio>
+                        </div>
+                        <div class="modal-body">
+                          <img src="img/works-samples/" alt="armed preview" class="img-responsive" style="min-width: 100%;">
+                        </div>
+                        <div class="modal-footer">
+                          <button class="btn btn-default" type="button" name="button" data-dismiss="modal">Close</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div> -->
+                  <!-- end modal for preview -->
+                <!-- </div> -->
             </div>
         </div>
     </div>
